--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,22 @@
 <div class="row">
   <nb-card>
-    <nb-card-body>Hello from ngx-admin sandbox project.</nb-card-body>
-  </nb-card>
-</div>
+    <nb-card-body>
+      <h3>Dynamic Columns</h3>
+      <p-table [columns]="cols" [value]="cars">
+          <ng-template pTemplate="header" let-columns>
+              <tr>
+                  <th *ngFor="let col of columns">
+                      {{col.header}}
+                  </th>
+              </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-rowData let-columns="columns">
+              <tr>
+                  <td *ngFor="let col of columns">
+                          {{rowData[col.field]}}
+                  </td>
+              </tr>
+          </ng-template>
+      </p-table>
+    </nb-card-body>
+  </nb-card></div>
