--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,7 +1,22 @@
 <div class="row">
   <nb-card style="width: 100%">
     <nb-card-body>
-      <h3>Devices</h3>
+      <div class="header-container" >
+        <div style="display: inline-block;">
+          <h3>Devices</h3>
+        </div>
+        <div style="position: relative; float: right;">
+          <p-button label="Export"></p-button>
+          <div class="divider"></div>
+          <p-button label="Import"></p-button>
+          <div class="divider"></div>
+          <p-button label="Delete"></p-button>
+          <div class="divider"></div>
+          <p-button label="Edit"></p-button>
+          <div class="divider"></div>
+          <p-button label="Add"></p-button>
+        </div>
+      </div>
       <p-table [columns]="cols" [value]="devices" [lazy]="true" #table (onLazyLoad)="loadDevicesLazy($event)"
         [loading]="loading" [scrollable]="true" [paginator]="true" [rows]="20" [style]="{width:'100%'}" scrollHeight="58vh"
         selectionMode="single" [(selection)]="selectedDevice" dataKey="siteId"
