--- a/src/app/pages/account-management/user-account.component.html
+++ b/src/app/pages/account-management/user-account.component.html
@@ -12,8 +12,8 @@
         </div>
         <p-table [columns]="cols" [value]="userAccounts" [lazy]="true" #table (onLazyLoad)="loadUserAccountsLazy($event)"
           [loading]="loading" [scrollable]="true" [paginator]="true" [rows]="20" [style]="{width:'100%'}" scrollHeight="58vh"
-          selectionMode="single" [(selection)]="selectedAccount" dataKey="id"
-          [totalRecords]="totalRecords">
+          selectionMode="single" [(selection)]="selectedUserAccount" dataKey="id"
+          [totalRecords]="totalRecords" (onRowSelect)="onRowSelect($event)" >
           <ng-template pTemplate="colgroup" let-columns>
               <colgroup>
                   <col *ngFor="let col of columns " [style.width]="col.width" [pSortableColumn]>
@@ -27,16 +27,16 @@
                   </th>
               </tr>
           </ng-template>
-          <ng-template pTemplate="body" let-rowData let-columns="columns">
+          <ng-template pTemplate="body" let-rowData let-columns="cols">
               <tr [pSelectableRow]="rowData">
-                  <td *ngFor="let col of columns ">
+                  <td *ngFor="let col of cols ">
                       {{rowData[col.field]}}
                   </td>
               </tr>
           </ng-template>
       </p-table>
 
-      <p-dialog header="User Account Details" [(visible)]="displayDialog" [focusOnShow]="false" [responsive]="true" showEffect="fade" [modal]="true"  [style]="{width: '300px'}">
+      <p-dialog header="User Account Details" [(visible)]="displayDialog" [focusOnShow]="false" [responsive]="true" showEffect="fade" [modal]="true"  [style]="{width: '500px'}">
         <div class="ui-g ui-fluid" *ngIf="userAccount">
             <div class="ui-g-12">
                 <div class="ui-g-4">
