--- a/src/app/pages/account-management/user-account.component.html
+++ b/src/app/pages/account-management/user-account.component.html
@@ -36,7 +36,9 @@
           </ng-template>
       </p-table>
 
-      <p-dialog header="User Account Details" [(visible)]="displayDialog" [focusOnShow]="false" [responsive]="true" showEffect="fade" [modal]="true"  [style]="{width: '500px'}">
+      <p-dialog header="User Account Details" [(visible)]="displayDialog" [focusOnShow]="false"
+                [responsive]="true" showEffect="fade" [modal]="true"  height="600"
+                [style]="{width: '500px'}">
           <div class="ui-g ui-fluid" *ngIf="userAccount">
             <form [formGroup]="userAccountForm" (ngSubmit)="save()">
             <div class="ui-g-12">
@@ -79,10 +81,8 @@
                     <label for="city">City:</label>
                 </div>
                 <div class="ui-g-8">
-                    <input pInputText id="city" formControlName="city" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.city.errors }" />
-                    <div *ngIf="submitted && f.city.errors" class="invalid-feedback">
-                        <div *ngIf="f.city.errors.required">First Name is required</div>
-                    </div>
+                  <p-autoComplete formControlName="city" [suggestions]="cities" field="name" (completeMethod)="search($event)"
+                  [minLength]="1"></p-autoComplete>
                 </div>
               </div>
             <div class="ui-g-12">
@@ -98,10 +98,7 @@
                 <label for="active">Active:</label>
             </div>
             <div class="ui-g-8">
-                <input pInputText id="active" formControlName="active" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.active.errors }" />
-                <div *ngIf="submitted && f.active.errors" class="invalid-feedback">
-                    <div *ngIf="f.active.errors.required">First Name is required</div>
-                </div>
+              <p-dropdown [options]="statuses" formControlName="active"></p-dropdown>
             </div>
           </div>
           </form>
