--- a/src/app/@theme/styles/_overrides.scss
+++ b/src/app/@theme/styles/_overrides.scss
@@ -9,3 +9,7 @@
     }
   }
 }
+
+.nb-theme-default nb-layout .layout .layout-container .content .columns nb-layout-column {
+  padding: 1.35rem 2.25rem 0.75rem !important;
+}
