--- a/src/app/pages/account-management/user-account.component.html
+++ b/src/app/pages/account-management/user-account.component.html
@@ -5,11 +5,7 @@
           <div style="display: inline-block;">
             <h3>{{ 'Account Management' | translate }}</h3>
           </div>
-          <div style="position: relative; float: right;">
-            <p-button icon="fa fa-plus" (click)="showDialogToAdd()" label="{{ translate.get('Create Account') | async }}"></p-button>
-            <div class="divider"></div>
-          </div>
-        </div>
+
         <p-table [columns]="cols" [value]="userAccounts" [lazy]="true" #table (onLazyLoad)="loadUserAccountsLazy($event)"
           [loading]="loading" [scrollable]="true" [paginator]="true" [rows]="20" [style]="{width:'100%'}" scrollHeight="58vh"
           selectionMode="single" [(selection)]="selectedUserAccount" dataKey="id"
@@ -35,6 +31,11 @@
               </tr>
           </ng-template>
       </p-table>
+      <div style="position: relative; float: right;margin-top: 5px;">
+        <p-button icon="fa fa-plus" (click)="showDialogToAdd()" label="{{ translate.get('Create Account') | async }}"></p-button>
+        <div class="divider"></div>
+      </div>
+    </div>
 
       <p-dialog header="User Account Details" [(visible)]="displayDialog" [focusOnShow]="false"
                 [responsive]="true" showEffect="fade" [modal]="true"  height="600"
