--- a/src/app/pages/account-management/user-account.component.html
+++ b/src/app/pages/account-management/user-account.component.html
@@ -12,7 +12,7 @@
           <div style="position: relative; float: right;margin-top: 5px;margin-bottom: 5px;">
             <div class="ui-inputgroup">
               <span class="ui-float-label">
-                <input id="float-input" type="text" size="50" [(ngModel)]="userSearch" pInputText style="padding-top: 7px; padding-bottom: 7px;">
+                <input id="float-input" type="text" size="50" [(ngModel)]="userSearch" pInputText onclick="this.setSelectionRange(0, this.value.length)" style="padding-top: 7px; padding-bottom: 7px;">
                 <label for="float-input">{{ 'Search by username or email' | translate }} </label>
                 <button id="search-btn" type="button" icon="pi pi-search" pButton label="{{ translate.get('Search') | async }}"  (click)="onUserSearch()" ></button>
             </span>
