--- a/src/app/pages/account-management/mail-account.component.html
+++ b/src/app/pages/account-management/mail-account.component.html
@@ -120,12 +120,23 @@
           </div>
           <div class="ui-g-12">
             <div class="ui-g-4">
-                <label for="accountType">Sender:</label>
+                <label for="sender">Sender:</label>
             </div>
             <div class="ui-g-8">
               <input pInputText id="sender" name="sender"  formControlName="sender" (click)="$event.target.select()"  class="form-control" [ngClass]="{ 'is-invalid': submitted && f.sender.errors }" />
                   <div *ngIf="submitted && f.sender.errors" class="invalid-feedback">
                       <div *ngIf="f.sender.errors.required">Sender is required</div>
+                  </div>
+            </div>
+          </div>
+          <div class="ui-g-12">
+            <div class="ui-g-4">
+                <label for="checkTime">Check Time:</label>
+            </div>
+            <div class="ui-g-8">
+              <input pInputText id="checkTime" name="checkTime"  formControlName="checkTime" (click)="$event.target.select()"  class="form-control" [ngClass]="{ 'is-invalid': submitted && f.checkTime.errors }" />
+                  <div *ngIf="submitted && f.checkTime.errors" class="invalid-feedback">
+                      <div *ngIf="f.checkTime.errors.required">Mail check time is required and must in a format like e.g. '23:02'</div>
                   </div>
             </div>
           </div>
