--- a/src/app/@theme/styles/_overrides.scss
+++ b/src/app/@theme/styles/_overrides.scss
@@ -13,3 +13,56 @@
 .nb-theme-default nb-layout .layout .layout-container .content .columns nb-layout-column {
   padding: 1.35rem 2.25rem 0.75rem !important;
 }
+
+.ui-datatable .ui-datatable-loading {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
+  opacity: 0.2;
+}
+
+.ui-datatable .ui-datatable-loading-content {
+    position: absolute;
+    left: 50%;
+    top: 25%;
+}
+
+.ui-table,
+.ui-table .ui-table-wrapper table {
+  font-size: 12px !important;
+}
+
+.divider{
+  width:5px;
+  height:auto;
+  display:inline-block;
+}
+
+/*
+::ng-deep body .ui-table .ui-sortable-column.ui-state-highlight {
+  background-color: #f4f4f4;
+  color: #3366ff;
+}
+*/
+body .ui-table .ui-table-thead > tr > th {
+ /* background-color: #007ad9 !important; */
+  color: #007ad9 !important;
+}
+
+
+body .ui-table .ui-sortable-column.ui-state-highlight {
+background-color: #f4f4f4 !important;
+color: #007ad9 !important;
+}
+
+body .ui-table .ui-sortable-column .ui-sortable-column-icon {
+color: #848484 !important;
+}
+
+.ui-g label {
+  font-weight: bold;
+  margin-top: .25em;
+  display: block;
+}
+
