--- a/src/app/@theme/styles/_overrides.scss
+++ b/src/app/@theme/styles/_overrides.scss
@@ -18,7 +18,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
+  -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=20)';
   opacity: 0.2;
 }
 
@@ -33,7 +33,7 @@
   font-size: 12px !important;
 }
 
-.divider{
+.divider {
   width:5px;
   height:auto;
   display:inline-block;
@@ -62,7 +62,6 @@ color: #848484 !important;
 
 .ui-g label {
   font-weight: bold;
-  margin-top: .25em;
+  margin-top: 0.25em;
   display: block;
 }
-
